update: nova rota de login com geração de token para usuário

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-PORT = 3000
+# PORT onde a aplicação vai rodar
+PORT=8000
+
+# Key para geração de token de login
+JWT_SECRET="8f@#LzP0z!w48Uzs9ak11ZzQ"
